--- a/index.html
+++ b/index.html
@@ -19,4 +19,10 @@
 2018 this year, I start to learn <strong>making <u>web page.</u></strong>
 <P>이번에는 <a href="https://opentutorials.org/course/3084/18418"target="_blank" title="코딩야학3기">코딩야학 3기</a>를 완료할 수 있을까? 하고나면 내가 무엇을 만들 수 있을까? 고작 10일 코스인데. 그래도 지금과 다른 어떤 것을 할 수 있겠지?</P><P style="margin-top:40px">이번 과정을 끝내면 이전에 수료하지 못했던 과정도 다시 마치고 싶다. 그리고 기억이 안나지만 재미있었던 다른 코딩교육 사이트. 완료해야지. 단순히 배우는 것만이 아니라 내가 원하는 화면을 만들어내고 싶다. 코딩을 왜 공부하나 싶겠지만 그동안 웹을 이용한 해보고 싶었던 프로젝트에도 조금이나마 가까워질 수 있을거고 분명 표현의 한계를 줄일 수 있을거야.
 <img src="picture1.jpg" width="50%">
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/x4xZG64OxCo" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></p>
+<p>
+  <script id="dsq-count-scr" src="//todaypractice.disqus.com/count.js" async></script>
+  <p>
+
+
 </body>
